[gd_scene load_steps=11 format=2]

[ext_resource path="res://shaders/Slashem.shader" type="Shader" id=1]
[ext_resource path="res://sprites/Slashem.png" type="Texture" id=2]
[ext_resource path="res://entities/Slashem.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "attack"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.25, 0.3, 0.35, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 6, 7, 8, 17, 18, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:state")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "audio_uw"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Area/Col:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=2]
resource_name = "freeze"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 0.95, 1, 1.05, 1.1, 1.15, 1.2, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 28, 29, 28, 29, 28, 29, 28, 29, 28, 29, 28, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:state")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "jump"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 15 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "jump_do"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:state")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "ouch"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 9, 19, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:state")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "audio_boommed"
} ]
}

[sub_resource type="Animation" id=5]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 1 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "audio_step"
}, {
"args": [  ],
"method": "audio_step"
} ]
}

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 1 )
shader_param/timer = 0.0
shader_param/rate = 110.0

[sub_resource type="CapsuleShape2D" id=7]
radius = 16.3525
height = 5.3176

[node name="Slashem" type="KinematicBody2D" groups=[
"freezeful",
"hurtful",
]]
z_index = -4095
collision_layer = 4
script = ExtResource( 3 )

[node name="AniPlay" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 1 )
anims/freeze = SubResource( 2 )
anims/jump = SubResource( 3 )
anims/ouch = SubResource( 4 )
anims/walk = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 6 )
position = Vector2( 0, -20 )
texture = ExtResource( 2 )
hframes = 10
vframes = 4
frame = 15

[node name="ColPoly" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, -32 )
polygon = PoolVector2Array( 0, 0, 6, 16, 0, 32, -6, 16 )

[node name="Area" type="Area2D" parent="."]

[node name="Col" type="CollisionShape2D" parent="Area"]
position = Vector2( 12, -16 )
rotation = 1.5708
shape = SubResource( 7 )
disabled = true

[node name="Vision" type="RayCast2D" parent="."]
position = Vector2( 0, -24 )
enabled = true
cast_to = Vector2( 0, 0 )
collision_mask = 3

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
